--- a/config/site.toml
+++ b/config/site.toml
@@ -1,4 +1,4 @@
-title = "Your Site Name"
+title = "Hello Bartholomew Demo"
 # logo = "URL to logo"
 base_url = "http://localhost:3000"
 about = "This site is generated with Bartholomew, the WebAssembly micro-CMS. And this message is in site.toml."
