--- a/config/site.toml
+++ b/config/site.toml
@@ -2,8 +2,8 @@ title = "Your Site Name"
 # logo = "URL to logo"
 ##base_url = "http://localhost:3000"
 about = "This site is generated with Bartholomew, the WebAssembly micro-CMS. And this message is in site.toml."
-theme = "story"
-##index_site_pages = ["blog"]
+theme = "bromide"
+index_site_pages = ["blurbs"]
 
 [extra]
 copyright = "The Site Authors"
